--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "yiisoft/yii2-swiftmailer": "*",
         "lowbase/yii2-user": "*",
         "lowbase/yii2-document": "*",
-        "dmstr/yii2-adminlte-asset": "2.*"
+        "dmstr/yii2-adminlte-asset": "2.*",
+        "2amigos/yii2-tinymce-widget": "~1.1"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
