--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "lowbase/yii2-user": "*",
         "lowbase/yii2-document": "*",
         "dmstr/yii2-adminlte-asset": "2.*",
-        "2amigos/yii2-tinymce-widget": "~1.1"
+        "2amigos/yii2-tinymce-widget": "~1.1",
+        "nex/yii2-datepicker": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
